# halo2-experiments

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: chips.rs  circuits.rs  decompose_bigInt.rs  inclusion_check.rs  inclusion_check_v2.rs  lib.rs
src/chips/: add_carry.rs  add_carry_v1.rs  add_carry_v2.rs  hash_v1.rs  hash_v2.rs  inclusion_check.rs  inclusion_check_v2.rs  is_zero.rs  less_than.rs  less_than_v2.rs  lookup.rs  merkle_sum_tree.rs  merkle_v1.rs  merkle_v2.rs  merkle_v3.rs  overflow_check.rs  overflow_check_v2.rs  poseidon.rs  safe_accumulator.rs  util.rs  utils.rs
src/chips/poseidon/: hash.rs  hash_with_instance.rs  mod.rs  spec.rs
src/circuits/: add_carry_v1.rs  add_carry_v2.rs  hash_v1.rs  hash_v2.rs  inclusion_check.rs  inclusion_check_v2.rs  less_than.rs  less_than_v2.rs  less_than_v3.rs  merkle_sum_tree.rs  merkle_v1.rs  merkle_v2.rs  merkle_v3.rs  overflow_check.rs  overflow_check_v2.rs  poseidon.rs  safe_accumulator.rs  utils.rs
