[package]
name = "halo2-experiments"
version = "0.1.0"
edition = "2021"

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_02_02"}
halo2_gadgets = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_02_02"}
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }
gadgets = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits"}
eth-types = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits"}