[package]
name = "halo2-experiments"
version = "0.1.0"
edition = "2021"

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_04_20"}
halo2_gadgets = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_04_20"}
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }
eth-types = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits", rev= "37b8aca"}
num-bigint = "0.4.3"
hex = "0.4.3"
arrayvec = "0.7.2"
gadgets = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits", rev= "37b8aca"}
rand = "0.8"
snark-verifier-sdk = { git = "https://github.com/privacy-scaling-explorations/snark-verifier"}
itertools = "0.10.3"
ark-std = "0.4.0"
